--- a/src/XelsDesktopWalletApp/Views/Pages/SendPages/SidechainPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/SendPages/SidechainPage.xaml
@@ -34,20 +34,16 @@
                 <Border Grid.Row="0">
                     <Grid>
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="3*"/>
                             <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/> 
                         </Grid.ColumnDefinitions>
 
                         <Label Grid.Column="0" Content="Amount"/>
-                        <Label Grid.Column="1" Content="Available:" />
+                        <Label Grid.Column="1" FontWeight="DemiBold" Content="Available:" />
 
-                        <Label Grid.Column="2"  x:Name="AvailableBalanceText" />
-
-                        <Label  Grid.Column="3" x:Name="CoinTypeText" 
-                          />
-
+                        <Label Grid.Column="2"  x:Name="AvailableBalanceText" FontWeight="DemiBold" />
+  
                     </Grid>
                 </Border>
 
@@ -122,7 +118,10 @@
                 </Grid.ColumnDefinitions>
 
                 <Border Grid.Column="0" CornerRadius="10" Background="WhiteSmoke" Margin=" 05 5"  >
-                    <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="An aditional amount of 0.00000001 xlc will be used to send this transaction."  FontWeight="DemiBold"  Margin=" 0 5" />
+                    <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text=""  FontWeight="DemiBold"  Margin=" 0 5" >
+                        An aditional amount of 0.00000001
+                        <TextBlock x:Name="coin" />  will be used to send this transaction.
+                    </TextBlock>
                 </Border>
 
                 <Border Grid.Column="1" CornerRadius="10" Background="WhiteSmoke" Margin=" 05 5" >
