--- a/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/BelsPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/BelsPage.xaml
@@ -16,7 +16,7 @@
             </Grid.RowDefinitions>
 
             <Border Grid.Row="0" Margin="100 2">
-                <Image x:Name="image" Height="80" HorizontalAlignment="Center" />
+                <Image x:Name="image" Height="200" HorizontalAlignment="Center" />
             </Border>
             <Border Grid.Row="1" Margin="100 02">
                 <Grid>
@@ -25,12 +25,12 @@
                         <ColumnDefinition Width=".5*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Border  Grid.Column="0" >
+                    <Border  Grid.Column="0" Margin="5" >
                         <TextBox  x:Name="textBoxTextToQr" IsReadOnly="True"  BorderBrush="Green" BorderThickness="1" Padding="5" />
                     </Border>
 
                     <Border  Grid.Column="1">
-                        <Button Content="Copy" Click="CopyAddressButton_Click" Margin="5 2"  RenderTransformOrigin="2.423,0.568" BorderThickness="1" BorderBrush="Green" Background="White" Foreground="Black" >
+                        <Button Content="Copy" Click="CopyAddressButton_Click" Margin="15 5"  RenderTransformOrigin="2.423,0.568" BorderThickness="1" BorderBrush="Green" Background="White" Foreground="Black" >
                             <Button.Resources>
                                 <Style TargetType="{x:Type Border}">
                                     <Setter Property="CornerRadius" Value="5"/>
