--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -452,7 +452,7 @@
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
 
-                                        <Button Grid.Column="0" x:Name="receiveButton" Click="ReceiveButton_Click"  Content="RECEIVE"  Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Normal" >
+                                        <Button Grid.Column="0" x:Name="receiveButton" Click="ReceiveButton_Click"  Content="RECEIVE"  Padding="2" FontWeight="Bold" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White">
                                             <Button.Resources>
                                                 <Style TargetType="Border">
                                                     <Setter Property="CornerRadius" Value="5"/>
@@ -460,7 +460,7 @@
                                             </Button.Resources>
                                         </Button>
 
-                                        <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Content="SEND" Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Normal" Margin="10,0,0,0"  >
+                                        <Button Grid.Column="1" x:Name="sendButton" Click="SendButton_Click"  Content="SEND" Padding="2" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontWeight="Bold" Margin="10,0,0,0"  >
                                             <Button.Resources>
                                                 <Style TargetType="Border">
                                                     <Setter Property="CornerRadius" Value="5"/>
