Logout Stacking stop message add.SELS and BELS null exception add.Dashboard Details Copy Message display.Login Wallet select Change Event Add.

--- a/src/XelsDesktopWalletApp/MainWindow.xaml
+++ b/src/XelsDesktopWalletApp/MainWindow.xaml
@@ -129,7 +129,7 @@
 
                     <StackPanel VerticalAlignment="Center" Margin="15">
 
-                        <ComboBox x:Name="comboWallets" ItemsSource="{Binding  Path=walletList, Mode=TwoWay}"
+                        <ComboBox x:Name="comboWallets" SelectionChanged="comboWallets_SelectionChanged" ItemsSource="{Binding  Path=walletList, Mode=TwoWay}"
                            DisplayMemberPath="Name" SelectedValuePath="Name"
                           Margin="0,10" materialDesign:HintAssist.Hint="WALLET NAME" 
                           Style="{StaticResource MaterialDesignFloatingHintComboBox}"
