--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/LogoutConfirmUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/LogoutConfirmUserControl.xaml
@@ -17,7 +17,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock Grid.Row="0" Margin="0,1" Width="313" Height="163" FontSize="20" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" Opacity="0.7"><Run/><LineBreak/><Run/><LineBreak/><Run/><LineBreak/><Run/><LineBreak/><Run Text="Are you sure you want to logout?"/></TextBlock>
-
+                <TextBlock Text="Be aware that this will also Stop the stacking process."  FontSize="15"  HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 <Button x:Name="closeBtn" Click="closeBtn_Click"  Background="Black" Foreground="White"
                                 VerticalAlignment="Top" HorizontalAlignment="Left" Content="X" Height="32" Margin="639,6,0,0" Width="41" >
 
