--- a/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/BelsPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/BelsPage.xaml
@@ -13,12 +13,13 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Border Grid.Row="0" Margin="100 2">
+            <Border Grid.Row="0" Margin="100 2" x:Name="gridRow0">
                 <Image x:Name="image" Height="200" HorizontalAlignment="Center" />
             </Border>
-            <Border Grid.Row="1" Margin="100 02">
+            <Border Grid.Row="1" Margin="100 02" x:Name="gridRow1">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*"/>
@@ -42,6 +43,9 @@
                     
 
                 </Grid>
+            </Border>
+            <Border Grid.Row="2" Height="50" Width="228"  x:Name="gridRow2" Visibility="Collapsed">
+                <TextBlock Text="You have not imported BELS address yet." FontSize="20" FontWeight="Bold" Margin="-85,0,-165,0" />
             </Border>
         </Grid>
     </StackPanel>
