--- a/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/SelsPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/SelsPage.xaml
@@ -11,14 +11,15 @@
     <StackPanel Background="White" >
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Border Grid.Row="0" Margin="100 2">
+            <Border Grid.Row="0" Margin="100 2" x:Name="gridRow0">
                 <Image x:Name="image" Height="200" HorizontalAlignment="Center" />
             </Border>
-            <Border Grid.Row="1" Margin="100 02">
+            <Border Grid.Row="1" Margin="100 02" x:Name="gridRow1" >
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="2*"/>
@@ -37,9 +38,13 @@
                             </Button.Resources>
                         </Button>
 
-                    </Border> 
+                    </Border>
                 </Grid>
             </Border>
+            <Border Grid.Row="2" Height="50" Width="228"  x:Name="gridRow2" Visibility="Collapsed">
+                <TextBlock Text="You have not imported SELS address yet." FontSize="20" FontWeight="Bold" Margin="-85,0,-165,0" />
+            </Border>
+
         </Grid>
     </StackPanel>
 </Page>
